-
Bug
-
Resolution: Fixed
-
Critical
-
None
-
3
-
9223372036854775807
If the changelog_mask is updated from the default, e.g. by running on MGS:
lctl conf_param snx11155-MDT0000.changelog_mask=+CLOSE
The mask change is picked up by the MDS, but on MDS restart (e.g. on failover of MDT), the updated flag is not preserved. The changelog_mask reverts to its original setting.
lctl set_param -P command stores options to params file. This options
are aplied in server_start_targets during target mount. At least
changelog apply default options during initialization. So it reset
options applied by set_param -P.
Params log file processing should be moved after device initialization.
So new parameters aplied after default.
How to recreate:
lctl get_param mdd.*.changelog_mask
testfs.changelog_mask=
MARK CREAT MKDIR HLINK SLINK MKNOD UNLNK RMDIR RENME RNMTO OPEN LYOUT TRUNC SATTR XATTR HSM MTIME CTIME
lctl conf_param testfs-MDT0000.mdd.changelog_mask='MARK CREAT MKDIR HLINK SLINK MKNOD UNLNK RMDIR RENME RNMTO OPEN CLOSE LYOUT TRUNC SATTR XATTR HSM MTIME CTIME'
lctl get_param mdd.*.changelog_mask
testfs-MDT0000.changelog_mask=
MARK CREAT MKDIR HLINK SLINK MKNOD UNLNK RMDIR RENME RNMTO OPEN CLOSE LYOUT TRUNC SATTR XATTR HSM MTIME CTIME
#restart mdt
lctl get_param mdd.*.changelog_mask
MARK CREAT MKDIR HLINK SLINK MKNOD UNLNK RMDIR RENME RNMTO OPEN LYOUT TRUNC SATTR XATTR HSM MTIME CTIME