LU-8040 mgc: apply params after device initializaton

lctl set_param -P command stores options to params file. This options
are aplied in server_start_targets during target mount. At least
changelog apply default options during initialization. So it reset
options applied by set_param -P.

This patch moves params log file processing after device
initialization. So new parameters aplied after default.

Signed-off-by: Artem Blagodarenko <artem.blagodarenko@seagate.com>
Xyratex-bug-id: MRP-3253
Change-Id: I2687b4e6a72e6288ce03d0e0fc065e06418df245